[gd_scene load_steps=2 format=3 uid="uid://f4ruays708id"]

[ext_resource type="Script" path="res://plugin_test_main.gd" id="1_c055v"]

[node name="plugin_test_main" type="Node"]
script = ExtResource( "1_c055v" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="init_admob_btn" type="Button" parent="VBoxContainer"]
offset_right = 540.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 38
text = "Initialize admob"

[node name="load_admob_interstitial" type="Button" parent="VBoxContainer"]
offset_top = 65.0
offset_right = 540.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 38
text = "load admob interstitial"

[node name="show_admob_interstitial" type="Button" parent="VBoxContainer"]
offset_top = 130.0
offset_right = 540.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 38
text = "show admob interstitial"

[node name="load_admob_rewarded" type="Button" parent="VBoxContainer"]
offset_top = 195.0
offset_right = 540.0
offset_bottom = 256.0
theme_override_font_sizes/font_size = 38
text = "load admob rewarded"

[node name="show_admob_rewarded" type="Button" parent="VBoxContainer"]
offset_top = 260.0
offset_right = 540.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 38
text = "show admob rewarded"

[node name="load_admob_banner" type="Button" parent="VBoxContainer"]
offset_top = 325.0
offset_right = 540.0
offset_bottom = 386.0
theme_override_font_sizes/font_size = 38
text = "load admob banner"

[node name="show_admob_banner" type="Button" parent="VBoxContainer"]
offset_top = 390.0
offset_right = 540.0
offset_bottom = 451.0
theme_override_font_sizes/font_size = 38
text = "show admob banner"

[node name="hide_admob_banner" type="Button" parent="VBoxContainer"]
offset_top = 455.0
offset_right = 540.0
offset_bottom = 516.0
theme_override_font_sizes/font_size = 38
text = "hide admob banner"

[connection signal="pressed" from="VBoxContainer/init_admob_btn" to="." method="_on_init_admob_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/load_admob_interstitial" to="." method="_on_load_admob_interstitial_pressed"]
[connection signal="pressed" from="VBoxContainer/show_admob_interstitial" to="." method="_on_show_admob_interstitial_pressed"]
[connection signal="pressed" from="VBoxContainer/load_admob_rewarded" to="." method="_on_load_admob_rewarded_pressed"]
[connection signal="pressed" from="VBoxContainer/show_admob_rewarded" to="." method="_on_show_admob_rewarded_pressed"]
[connection signal="pressed" from="VBoxContainer/load_admob_banner" to="." method="_on_load_admob_banner_pressed"]
[connection signal="pressed" from="VBoxContainer/show_admob_banner" to="." method="_on_show_admob_banner_pressed"]
[connection signal="pressed" from="VBoxContainer/hide_admob_banner" to="." method="_on_hide_admob_banner_pressed"]
